fix: Change text alignment to left for the sixth child in table styles

--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -136,7 +136,7 @@
 			}
 			&:nth-child(6) {
 				width: 14%;
-				text-align: center;
+				text-align: left;
 			}
 		}
 	}
